--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +26,7 @@
         <!--                <div class="sectionwrapper">-->
 
         <figure class="tema">
-            <a href=""> <img src="billeder/tema1.png" alt="tema 1">
+            <a href="web.html"> <img src="billeder/tema1.png" alt="tema 1">
                 <figcaption class="tekst">
                     Grundlæggende web
                 </figcaption>
@@ -32,12 +34,12 @@
         </figure>
 
 
-        <figure class="tema"> <a href=""> <img src="billeder/tema3.png" alt="tema 3"></a>
+        <figure class="tema"> <a href="indhold.html"> <img src="billeder/tema3.png" alt="tema 3"></a>
             <figcaption class="tekst">Grundlæggende indhold</figcaption>
         </figure>
 
 
-        <figure class="tema"> <a href=""> <img src="billeder/tema4.png" alt="tema 4"></a>
+        <figure class="tema"> <a href="ux.html"> <img src="billeder/tema4.png" alt="tema 4"></a>
             <figcation class="tekst">Grundlæggende UX</figcation>
         </figure>
 
@@ -47,6 +49,4 @@
 
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
