--- a/indhold.html
+++ b/indhold.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <header>
@@ -25,18 +27,33 @@
         <div class="sectionwrapper">
             <figure class="overskrift"> <img src="billeder/tema3.svg" alt="overskrift"> </figure>
             <div class="col">
-
+                <h2>F.C. Københavns Fanclub</h2>
+                <h3>// 03.02.08 Redesign af wesite // <a href="http://emiliedalgaard.dk/kea/03-content/03-redesign/dokumentationssite/" target="_blank">dokumentationssite</a> </h3>
+                <p>I dette forløb udarbejdede min gruppe og jeg en virksomhedsvideo samt et redesign af en selvvalgt virksomheds website. Jeg kontaktede min veninde, som arbejder for F.C. Københavns Fanklub, og vi fik lov til at indlede et samarbejde med dem. </p>
+                <p>I delen med virkesomhedsvideoen fik vi øvet færdigheder i optage- og redigeringsteknik, samt brugt viden omkring interviewteknik, billedkomposition og dramaturgi. </p>
+                <p>Vi startede med at lave et storyboard over vores interview, og udarbejdede derefter nogle interviewspørgsmål som vi godt ville komme ind på. I selve interviewet fik vi rigtig mange gode svar, og skulle faktisk ikke klippe sætninger sammen for at de gav mening. Vi var også rigtig heldige med lyset indenfor, og skulle derfor kun color grade nogle af vores b-rolls klip, så farverne blev lidt lysere og mere indbydende. </p>
+                <p> I redesign delen startede vi med at foretage brugertests i form af BERT-test og 5 sekunderrs test, for at fastslå brugernes opfattelse af den eksisterende website, og derudfra fandt vi nogle forbedringspunkter som vi ville arbejde med. Vi besluttede os for, at arbejde på at gøre websitet mindre rodet, og gøre de vigtigste punkter for FCKFC tydelige. </p>
             </div>
-            <div class="col_img">
-
+            <div class="col_1">
+                <p> Virksomhedsvideoen kom ikke ind på hjemmesiden, da vores gruppe havde forstået opgaven sådan, at det skulle være et interview, og ikke som sådan en video for selve hjemmesiden. Derfor kørte vi på det følelsesmæssige aspekt i videoen, og ikke det informative som hjemmesiden er. </p>
+                <p> Forud for produktionen lavede vi et trelloboard, hvor vi satte opgaver ind og fulgte dem. Vi lavede også styletile, moodboard, wireframes og layoutdiagrammer, som kan ses på dokumentationssitet.</p>
+                <p>På dokumentationssitet kan man også se resultaterne af de brugertests, som vi lavede for den eksisterende website, samt brugertests af redesignet som vi have udarbejdet. I BERT-testen kunne vi se fremgang i de ting vi arbejdede med. Og samtidig fik vi også en god lighthouse-test. Det eneste i lighthouse-testen var, at forsiden var lang tid om at loade, da billede var rigtig stort.
+                </p>
+                <figure class="redesign"> <a href="http://marollemarie.dk/kea/03-content/03_02_08_redesign/" target="_blank"> <img src="billeder/tema3.png" alt="link til redesign">
+                        <figcaption class="tekst">Besøg website</figcaption>
+                    </a> </figure>
             </div>
+
             <div class="video">
-
+                <h3 class="center">// 03.02.08 Virksomhedsvideo</h3>
+                <video class="center" controls>
+                    <source src="video/fckfinal.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
 
     </section>
 
-
+    <footer>Multimediedesign // 1. semester // @Emilie Dalgaard </footer>
     <script src="script.js"></script>
 </body></html>
