--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +24,6 @@
 
     <section id="portfolio">
         <figure class="overskrift"> <img src="billeder/portfolio_lys.png" alt="portfolio skrift"> </figure>
-        <!--                <div class="sectionwrapper">-->
 
         <figure class="tema">
             <a href="web.html"> <img src="billeder/tema1.png" alt="tema 1">
@@ -43,10 +43,10 @@
             <figcation class="tekst">Grundlæggende UX</figcation>
         </figure>
 
-        <!--                </div>-->
+
     </section>
 
-
+    <footer>Multimediedesign // 1. semester // @Emilie Dalgaard </footer>
 
     <script src="script.js"></script>
 </body></html>
