--- a/om.html
+++ b/om.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 
@@ -41,6 +42,6 @@
     </section>
 
 
-    <footer>Emilie Dalgaard</footer>
+    <footer>Multimediedesign // 1. semester // @Emilie Dalgaard </footer>
     <script src="script.js"></script>
 </body></html>
