--- a/ux.html
+++ b/ux.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <header>
@@ -20,10 +22,29 @@
 <a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
 
 <body>
+    <section id="ux">
+        <div class="sectionwrapper">
+            <figure class="overskrift"> <img src="billeder/tema4.svg" alt="overskrift"> </figure>
+            <div class="col">
+                <h2>Projects</h2>
+                <h3>// 04.03.01 Design Sprint - Native App // <a href="filer/04_03_01_native_app_jeres_gruppe6.pdf%20.pdf" target="_blank">dokumentation</a> </h3>
+                <p>I dette tema lærte jeg at bruge projektmetoden Design Sprint, samt blevet mere øvet i Adobe XD og InDesign. Design sprint har styrket mine færdigheder indenfor struktureret konceptudvikling og udførsel. I starten var det svært at forså hvorfor man skulle igennem så mange faser (specielt i map- og sketchfasen), men det begyndte at give mening i slutningen, da man kunne se resultatet af at gå faserne slavisk igennem. </p>
+                <p>I min gruppe udviklede vi ’Projects’, som er en app der hjælper studerende med at finde hjælp til projekter, og samtidig giver studerende mulighed for at komme med på projekter, de normalt ikke ville være en del af, og derfor styrker deres kompetencer, CV og netværk. </p>
+                <p>I gruppen brugte vi design sprint og gik alle faserne igennem, som man kan se i vores <a href="filer/04_03_01_native_app_jeres_gruppe6.pdf%20.pdf">dokumentationssite.</a> </p>
+                <p> Hver dag havde vi et daily scrum meeting, hvor vi alle fortalte hvad vi lavede dagen før og hvad vi skulle nå i dag. Samtidig valgte vi også en facilitator og decider til hver dag. Vi lavede alle sketches, vi kom alle med idéer, og blev for det meste enige om, hvordan appen skulle fungere og se ud, men hvis der var lidt uenigheder trådte decideren frem med sin supervote. </p>
 
+            </div>
+            <div class="col_img">
+                <figure class="projects"> <a href="https://xd.adobe.com/view/c42c1de7-2c20-4978-42b6-1c301e03b797-b21d/" target="_blank"> <img src="billeder/tema4.png" alt="projects">
+                        <figcaption class="tekst">Besøg prototype</figcaption>
+                    </a> </figure>
 
+            </div>
 
+        </div>
+    </section>
 
+    <footer>Multimediedesign // 1. semester // @Emilie Dalgaard </footer>
 
     <script src="script.js"></script>
 </body></html>
