--- a/web.html
+++ b/web.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <header>
@@ -28,7 +29,7 @@
                 <h2>Dadaisme</h2>
                 <h3>// 01.04 Responsive site</h3>
                 <p>I tema 1 udarbejdede jeg en hjemmeside om stilarten dadaisme. Under temaet fik jeg tilegnet mig viden om design, samt færdigheder inden for HTML, CSS, Photoshop (splashbillede), InDesign og Adobe XD. </p>
-                <p>I designprocessen startede jeg med at undersøge dadaisme, og udviklede derudfra et <a href="filer/moodboard_emiliedalgaard.pdf" target="_blank">moodboard</a> i InDesign som afspejlede dadaisme visuelt. Efter jeg havde lavet et moodboard, lavede jeg et <a href="filer/01.01.03_Content_til_stilartsite.pdf">mockup</a> over mobil- og desktopversion i Adobe XD ud fra en wireframe som underviserene havde givet os. </p>
+                <p>I designprocessen startede jeg med at undersøge dadaisme, og udviklede derudfra et <a href="filer/moodboard_emiliedalgaard.pdf" target="_blank">moodboard</a> i InDesign som afspejlede dadaisme visuelt. Efter jeg havde lavet et moodboard, lavede jeg et <a href="filer/01.01.03_Content_til_stilartsite.pdf" target="_blank">mockup</a> over mobil- og desktopversion i Adobe XD ud fra en wireframe som underviserene havde givet os. </p>
                 <p>Derefter kodede jeg websitet i HTML og CSS, stadig ud fra wireframen som underviserene havde givet os. For at lave det hjemmesiden ud fra wireframen brugte jeg flexbox. Jeg valgte at følge mit moodboard, og bruge de jordiske og røde farver som dadaisme var kendt for, selvom det ikke altid er lige brugervenligt med lidt mørkere farver som baggrunde. Sammen med selve websitet lavede jeg også et styletile med fonte, iconer og farver. Derudover har jeg benyttet media queries, så hjemmesiden blev responsiv i hhv. mobil, tablet og desktop.
                 </p>
             </div>
@@ -43,7 +44,7 @@
 
     </section>
 
-    <script src="script.js"></script>
-</body>
+    <footer>Multimediedesign // 1. semester // @Emilie Dalgaard </footer>
 
-</html>
+    <script src="script.js"></script>
+</body></html>
