Tirsdag kl. 10.15 - færdig

--- a/indhold.html
+++ b/indhold.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
-<header>
-    <nav>
-        <a href="index.html">FORSIDE</a>
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="om.html">OM</a>
-    </nav>
-</header>
-
-<a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
-
 <body>
+    <header>
+        <nav>
+            <a href="index.html">FORSIDE</a>
+            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="om.html">OM</a>
+        </nav>
+    </header>
+
+    <a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
+
+
 
     <section id="indhold">
         <div class="sectionwrapper">
@@ -39,9 +41,11 @@
                 <p> Forud for produktionen lavede vi et trelloboard, hvor vi satte opgaver ind og fulgte dem. Vi lavede også styletile, moodboard, wireframes og layoutdiagrammer, som kan ses på dokumentationssitet.</p>
                 <p>På dokumentationssitet kan man også se resultaterne af de brugertests, som vi lavede for den eksisterende website, samt brugertests af redesignet som vi have udarbejdet. I BERT-testen kunne vi se fremgang i de ting vi arbejdede med. Og samtidig fik vi også en god lighthouse-test. Det eneste i lighthouse-testen var, at forsiden var lang tid om at loade, da billede var rigtig stort.
                 </p>
-                <figure class="redesign"> <a href="http://marollemarie.dk/kea/03-content/03_02_08_redesign/" target="_blank"> <img src="billeder/tema3.png" alt="link til redesign">
+                <a href="http://marollemarie.dk/kea/03-content/03_02_08_redesign/" target="_blank">
+                    <figure class="redesign"> <img src="billeder/tema3.png" alt="link til redesign">
                         <figcaption class="tekst">Besøg website</figcaption>
-                    </a> </figure>
+                    </figure>
+                </a>
             </div>
 
             <div class="video">
