--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
@@ -25,23 +26,29 @@
     <section id="portfolio">
         <figure class="overskrift"> <img src="billeder/portfolio_lys.png" alt="portfolio skrift"> </figure>
 
-        <figure class="tema">
-            <a href="web.html"> <img src="billeder/tema1.png" alt="tema 1">
+        <a href="web.html">
+            <figure class="tema">
+                <img src="billeder/tema1.png" alt="tema 1">
                 <figcaption class="tekst">
                     Grundlæggende web
                 </figcaption>
-            </a>
-        </figure>
+
+            </figure>
+        </a>
 
 
-        <figure class="tema"> <a href="indhold.html"> <img src="billeder/tema3.png" alt="tema 3"></a>
-            <figcaption class="tekst">Grundlæggende indhold</figcaption>
-        </figure>
+        <a href="indhold.html">
+            <figure class="tema"> <img src="billeder/tema3.png" alt="tema 3">
+                <figcaption class="tekst">Grundlæggende indhold</figcaption>
+            </figure>
+        </a>
 
 
-        <figure class="tema"> <a href="ux.html"> <img src="billeder/tema4.png" alt="tema 4"></a>
-            <figcation class="tekst">Grundlæggende UX</figcation>
-        </figure>
+        <a href="ux.html">
+            <figure class="tema"> <img src="billeder/tema4.png" alt="tema 4">
+                <figcaption class="tekst">Grundlæggende UX</figcaption>
+            </figure>
+        </a>
 
 
     </section>
