--- a/ux.html
+++ b/ux.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
-<header>
-    <nav>
-        <a href="index.html">FORSIDE</a>
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="om.html">OM</a>
-    </nav>
-</header>
-
-<a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
-
 <body>
+    <header>
+        <nav>
+            <a href="index.html">FORSIDE</a>
+            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="om.html">OM</a>
+        </nav>
+    </header>
+
+    <a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
+
+
     <section id="ux">
         <div class="sectionwrapper">
             <figure class="overskrift"> <img src="billeder/tema4.svg" alt="overskrift"> </figure>
@@ -35,9 +37,11 @@
 
             </div>
             <div class="col_img">
-                <figure class="projects"> <a href="https://xd.adobe.com/view/c42c1de7-2c20-4978-42b6-1c301e03b797-b21d/" target="_blank"> <img src="billeder/tema4.png" alt="projects">
+                <a href="https://xd.adobe.com/view/c42c1de7-2c20-4978-42b6-1c301e03b797-b21d/" target="_blank">
+                    <figure class="projects"> <img src="billeder/tema4.png" alt="projects">
                         <figcaption class="tekst">Besøg prototype</figcaption>
-                    </a> </figure>
+                    </figure>
+                </a>
 
             </div>
 
