--- a/web.html
+++ b/web.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
-<header>
-    <nav>
-        <a href="index.html">FORSIDE</a>
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="om.html">OM</a>
-    </nav>
-</header>
-<a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
-
 <body>
+    <header>
+        <nav>
+            <a href="index.html">FORSIDE</a>
+            <a href="portfolio.html">PORTFOLIO</a>
+            <a href="om.html">OM</a>
+        </nav>
+    </header>
+    <a href="portfolio.html"> <img src="billeder/pil.png" class="tilbage" alt="tilbage"></a>
+
+
 
     <section id="web">
         <div class="sectionwrapper">
@@ -33,11 +35,12 @@
                 <p>Derefter kodede jeg websitet i HTML og CSS, stadig ud fra wireframen som underviserene havde givet os. For at lave det hjemmesiden ud fra wireframen brugte jeg flexbox. Jeg valgte at følge mit moodboard, og bruge de jordiske og røde farver som dadaisme var kendt for, selvom det ikke altid er lige brugervenligt med lidt mørkere farver som baggrunde. Sammen med selve websitet lavede jeg også et styletile med fonte, iconer og farver. Derudover har jeg benyttet media queries, så hjemmesiden blev responsiv i hhv. mobil, tablet og desktop.
                 </p>
             </div>
-            <div class="col_img">
-                <figure class="dadaisme"> <a href="http://emiliedalgaard.dk/kea/01-web/04-responsive/01_04_02_responsive_site_v2/index.html#splash" target="_blank"><img src="billeder/dadaisme.png" alt="dadaisme">
+            <div class="col_img"><a href="http://emiliedalgaard.dk/kea/01-web/04-responsive/01_04_02_responsive_site_v2/index.html#splash" target="_blank">
+                    <figure class="dadaisme"> <img src="billeder/dadaisme.png" alt="dadaisme">
 
                         <figcaption class="tekst">Besøg website</figcaption>
-                    </a></figure>
+                    </figure>
+                </a>
             </div>
         </div>
 
